mbs project and index update

--- a/index.html
+++ b/index.html
@@ -8,4 +8,6 @@
         <p><a href="rbell/lastwednesday1.html">3 Pages Project</a></p>
 
         <p><a href="rbell-painting/drawing.html">Code Based Drawing I: Painting by CSS Code</a></p>
+
+        <p><a href="mbs.html"> Mind Body Spirit Photoshop Project</a></p>
 </html>
