--- a/mbs.html
+++ b/mbs.html
@@ -43,6 +43,8 @@
             Aside from that, doing this project put in perspective for me how to represent
             myself in a more..abstract way. Using images in a way that can imply things to
             you, but may be interpreted differently to others.
+
+            <a href="bell-r-mbspb-final-1.pdf">Process Book.</a>
            </p2>
            </div>
     </body>
