continued net art work

--- a/index.html
+++ b/index.html
@@ -10,4 +10,6 @@
         <p><a href="rbell-painting/drawing.html">Code Based Drawing I: Painting by CSS Code</a></p>
 
         <p><a href="mbs.html"> Mind Body Spirit Photoshop Project</a></p>
+
+        <p><a href="rbell-netart-page1.html">Net.Art Project</a></p>
 </html>
