--- a/rbell-netart-page1.html
+++ b/rbell-netart-page1.html
@@ -55,9 +55,9 @@
         position: absolute;
         height: 265px;
         width: 400px;
-        z-index: 25;
-        bottom: -25;
-        right: 0;
+        z-index: 40;
+        bottom: 0;
+        left: 0;
     }
     </style>
     <body>
@@ -76,8 +76,9 @@
                 </div>
             <div id="sleeping">
                 <img src="net.art images/sleeping tiger.png">
+                </div>
             <div id="cattail">
-                <img src="net.art images/cattail-gif.gif">
+                <a href="index.html"><img src="net.art images/cattail-gif.gif"></a>
             </div>
             </div>
 
