net.art updates

--- a/rbell-netart-page1.html
+++ b/rbell-netart-page1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<tilte></tilte>
+<title></title>
 <style>
     #container{
         position: relative;
@@ -78,7 +78,7 @@
                 <img src="net.art images/sleeping tiger.png">
                 </div>
             <div id="cattail">
-                <a href="index.html"><img src="net.art images/cattail-gif.gif"></a>
+                <a href="rbell-netart-page2.html"><img src="net.art images/cattail-gif.gif"></a>
             </div>
             </div>
 
