net.art updates

--- a/index.html
+++ b/index.html
@@ -12,4 +12,7 @@
         <p><a href="mbs.html"> Mind Body Spirit Photoshop Project</a></p>
 
         <p><a href="rbell-netart-page1.html">Net.Art Project</a></p>
+        <p>
+            <a href="bell-r-netart-pb.pdf">Net.Art Process Book</a>
+        </p>
 </html>
