--- a/rbell-netart-page2.html
+++ b/rbell-netart-page2.html
@@ -45,7 +45,7 @@
     <img src="net.art images/forest-floor.png">
 </div>
 <div id="lilywalking">
-    <img src="net.art images/walkinglily.gif">
+   <a href="rbell-netart-page3.html"> <img src="net.art images/walkinglily.gif"> </a>
 </div>
 
 
