electronics kit and index change

--- a/index.html
+++ b/index.html
@@ -61,4 +61,8 @@
 <a href="bell-r-model.html">TinkerCad 3D Model</a>
 
         </p>
+
+        <p>
+          <a href="rbell-electronics.html">Electronics Kit</a>
+        </p>
 </html>
